[package]
name = "allowed-proc-mount-types-psp"
version = "0.1.11"
authors = ["Rafael Fernández López <ereslibre@ereslibre.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
kubewarden-policy-sdk = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
